--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
   "dependencies": {
     "core-js": "^3.6.5",
     "vue": "^2.6.11",
-    "vue-router": "^3.0.1"
+    "vue-router": "^3.0.1",
+    "element-ui": "^2.0.10"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "~4.5.13",
