--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
     "core-js": "^3.6.5",
     "vue": "^2.6.11",
     "vue-router": "^3.0.1",
-    "element-ui": "^2.0.10"
+    "element-ui": "^2.0.10",
+    "axios": "^0.26.0"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "~4.5.13",
